	PR gold/11658 	* output.cc 	(Output_section::Input_section_sort_entry::compare_section_ordering): 	Change to return non-zero correctly. 	(Output_section::Input_section_sort_section_order_index_compare 	::operator()): Change to fix ambiguity in comparisons.